# august-offensive

./: .env.sample  .gitignore  .htaccess  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  autoload.php  index.php  shell.nix
.github/workflows/: pull_request.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
private/Controller/: Controller.php
private/Model/: Connection.php  Query.php  Result.php  creds.php  fresh.sql
private/View/: Main.php  Output.php
private/controller/: Controller.php
private/model/: Connection.php  creds.php
private/view/: Result.php
src/: errors.rs  main.rs  schema.rs
src/messages/: callback.rs  format_msg.rs  mod.rs  not_understood.rs
src/routes/: callback.rs  format_msg.rs  messages.rs  mod.rs  not_understood.rs
src/routes/messages/: mod.rs
test/Controller/: ControllerTest.php
test/Model/: QueryTest.php  ResultTest.php
test/View/: OutputTest.php
