[package]
name = "august-offensive"
version = "0.2.1"
authors = ["Kevin J Hoerr <kjhoerr@submelon.tech>"]
description = "Turn-based strategy game as a web service"
license = "ISC"
readme = "README.md"
repository = "https://github.com/kjhoerr/august-offensive.git"

[[bin]]
name = "august-offensive"
path = "src/main.rs"

[dependencies]
dotenv = "0.10"
log = "0.4.0"
env_logger = "0.6.2"

diesel = { version = "1.4.2", features = ["postgres"] }

actix-rt = "0.2.4"
actix-web = "1.0.5"
serde = "1.0"
serde_derive = "1.0"
