[package]
name = "august-offensive"
version = "0.2.2"
authors = ["Kevin J Hoerr <kjhoerr@submelon.tech>"]
description = "Turn-based strategy game as a web service"
license = "ISC"
readme = "README.md"
repository = "https://github.com/kjhoerr/august-offensive.git"

[[bin]]
name = "august-offensive"
path = "src/main.rs"

[dependencies]
dotenv = "0.14"
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"

diesel = { version = "1.4.3", features = ["postgres"] }

actix-rt = "0.2.5"
actix-web = "1.0.8"
actix-diesel = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
