[package]
edition = "2021"
name = "august-offensive"
version = "0.2.3"
authors = ["Kevin J Hoerr <kjhoerr@submelon.tech>"]
description = "Turn-based strategy game as a web service"
license = "ISC"
readme = "README.md"
repository = "https://github.com/kjhoerr/august-offensive.git"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[[bin]]
name = "august-offensive"
path = "src/main.rs"

[dependencies]
dotenvy = "*"
log = "*"
env_logger = "*"

diesel = { version = "2", features = ["postgres", "r2d2", "uuid"] }

actix-web = "4"
actix-rt = "*"
bytes = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
uuid = "*"
